@@ -593,7 +593,8 @@ INPUT                  = \
 	$(SRCDIR)/src/sasindexenum.h \
 	$(SRCDIR)/src/sphsinglepcqueue.h \
 	$(SRCDIR)/src/sphtimer.h \
-	$(SRCDIR)/src/sphthread.h
+	$(SRCDIR)/src/sphthread.h \
+	$(SRCDIR)/src/sphgtod.h
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
