@@ -10,6 +10,21 @@
  *
  * Contributors:
  *     IBM Corporation, Ryan S Arnold - New API.
+ *     IBM Corporation, Steven J Munroe - Correct Intel implementation.
+ */
+
+/*!
+ * \file  sphgtod.h
+ * \brief Functions to convert time stamp (sphtimer_t) values to
+ * struct timeval value format with gettimeofday() epoch.
+ *
+ * This API is intended to support post processing time stamps
+ * (including those generated by SPHLFLogger_t and SPHSinglePCQueue_t)
+ * into gettimeofday() epoch and related formated time values.
+ *
+ * It is not intended as an exact replacement for gettimeofday()
+ * because it may not include any NTP corrections for example,
+ * but it will close and will be monotonic.
  */
 
 #include <sys/time.h>
