@@ -19,11 +19,11 @@
 #if __WORDSIZE == 64
 # define NS_P_S 1000000000UL
 # define NS_P_uS 1000UL
-# define ALLOWABLE_DRIFT 3000UL
+# define ALLOWABLE_DRIFT 9000UL
 #else
 # define NS_P_S 1000000000ULL
 # define NS_P_uS 1000ULL
-# define ALLOWABLE_DRIFT 3000ULL
+# define ALLOWABLE_DRIFT 9000ULL
 #endif
 #define COUNT 10000000
 
